# godot-kafka-extension

./: .gitmodules  .sconsign.dblite  CMakeLists.txt  LICENSE  README.md  SConstruct  godot-kafka-extension.code-workspace
demo/kafkaextensionstest/: KafkaExtension.gdextension.uid  icon.svg.import  kafka.gd  kafka.gd.uid  main.tscn  project.godot
include/: KafkaConsumer.h  KafkaProducer.h  register_types.h
librdkafka/win/include/librdkafka/: rdkafka.h  rdkafkacpp.h
librdkafka/win/lib/cmake/RdKafka/: RdKafkaConfig.cmake  RdKafkaConfigVersion.cmake  RdKafkaTargets.cmake
librdkafka/win/lib/pkgconfig/: rdkafka++.pc  rdkafka.pc
src/: KafkaConsumer.cpp  KafkaConsumer.os  KafkaProducer.cpp  KafkaProducer.os  kafka_producer.h  register_types.cpp  register_types.os
